# SelingerQuantumLambdaCalculus

./: .travis.yml  LICENSE  README.md  dune  dune-project  main.ml  qlambda.install  qlambda.opam
examples/: deutsch.qlam  entanglement-easy.qlam  ex-1.3.15.qlam  teleport.qlam
src/: Environment.ml  cui.ml  decorated_typed.ml  dune  environment.ml  environment.mli  eval.ml  intuitionistic_typed.ml  lexer.mll  parser.mly  syntax.ml  unify.ml
tests/: dune  eval.ml  prim.ml  typing.ml
